# gt4-rs-notes

./: Cargo.toml  build.rs  notes.db3
data/: resources.gresource.xml
data/ui/: window.ui
src/: main.rs
src/create_page/: imp.rs  mod.rs
src/details_page/: imp.rs  mod.rs
src/note_row/: imp.rs
src/window/: imp.rs  mod.rs
