[package]
name = "mynotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_4"] }
chrono = "0.4.31"
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0"

[dependencies.gtk]
version = "0.9.4"
package = "gtk4"
features = ["v4_12"]

[build-dependencies]
glib-build-tools = "0.20.0"
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"

